<resources>
    <string name="app_name">StepCounter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">主页</string>
    <string name="menu_history">历史记录</string>
    <string name="menu_account">账户</string>
    <string name="welcome">欢迎</string>
    <string name="welcome_to_home">开始体验</string>
    <string name="logout">登出</string>

    <string name="login">登录</string>
    <string name="login_button">登录(未注册将自动注册)</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
</resources>